@@ -160,7 +160,7 @@ only useful on machines with multiple CPUs and/or network adapters.
 The maximum
 .I number
 of concurrent TCP connection that can be handled by each server. The
-default is 10.
+default is 100.
 .TP
 .B \-P\fI pidfile
 Use the specified
