@@ -165,8 +165,7 @@ option
 .TP
 .B tcp\-count:\fR <number>
 The maximum number of concurrent, active TCP connections by each server. 
-Default is 10. This option should have a value below 1000.
-Same as commandline option 
+Default is 100. Same as commandline option 
 .BR \-n .
 .TP
 .B tcp\-query\-count:\fR <number>
