@@ -1,5 +1,6 @@
 23 November 2012: Wouter
 	- Fix compiler warnings and fix blocking pipes.
+	- default tcp-count set to 100.
 
 21 November 2012: Wouter
 	- Implement rrl log of unblock for collision.
